0.9.0-20070xxx
--------------
- added the ability to choose the default module from the
  application settings: "Calendars", "Contacts" or "Mail";
- added the ability to show or hide the password change dialog from the
  application settings;
- put a work-around in the LDAP directory code to avoid fetching all the
  entries whenever a specific one is being requested;
- added support for limiting LDAP queries with the SOGoLDAPQueryLimit and
  the SOGoLDAPSizeLimit settings;
- fixed a bug where folders starting with digits would not be displayed;
- improved IE7 and Safari support: priority menus, attendees selector.

0.9.0-20070713
--------------
- added the ability to specify a super user through the SOGoSuperUsername user
  default; 
- added the ability to view the message source;
- don't autocreate folders if we are not their owners;
- made compatible with PostgreSQL 8.2;
- the months and years menus of the date selector would no longer appear;
- fixed a bug which would produce task SQL records which would violate
  non-null constraints on the quick calendar tables;
- the tasks due date was wrongly set because of a change in the API;
- it was impossible to empty the start and the due date in the task editor
  from the moment they were set;
- imap folders with non-ascii characters are now correctly accessed;
- display the quotas of the selected mailbox on servers that support quotas;
- a bug in the folder acl description was preventing from accessing resources
  in dav;
- AuthentificationMethod was renamed to SOGoAuthentificationMethod;
- SOGoAuthentificationMethod needs to be explicitly set to "bypass" to prevent
  login verification;

Local variables:
mode: text
End: