@@ -1,0 +1,5 @@
+function onPrintCurrentMessage(event) {
+  window.print();
+
+  preventDefault(event);
+}
