@@ -9,7 +9,8 @@
 - added support for limiting LDAP queries with the SOGoLDAPQueryLimit and
   the SOGoLDAPSizeLimit settings;
 - fixed a bug where folders starting with digits would not be displayed;
-- improved IE7 and Safari support: priority menus, attendees selector.
+- improved IE7 and Safari support: priority menus, attendees selector;
+- added the ability to print messages from the mailer toolbar;
 
 0.9.0-20070713
 --------------
